-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10, 6.11
-
-
63d31b9ee (dev), 394536932 (6.10), 1e0a46ab6 (dev), 65a8b5890 (6.10), e50413779 (dev), 166e79931 (6.10), a342de86f (dev), 131f4d834 (6.10)
-
Multimedia, weeks 18-19
stack trace:
Thread 27 "pw-data-loop" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0xffffdf1aefa0 (LWP 2720)] 0x0000fffff1761870 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 (gdb) bt #0 0x0000fffff1761870 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #1 0x0000ffffe04378f4 in ?? () from /usr/lib/aarch64-linux-gnu/spa-0.2/support/libspa-support.so #2 0x0000fffff17443c0 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #3 0x0000fffff5a4595c in start_thread (arg=0xfffff7fb4be0) at ./nptl/pthread_create.c:447 #4 0x0000fffff5aaba4c in thread_start () at ../sysdeps/unix/sysv/linux/aarch64/clone3.S:76 (gdb) thread apply bt all Invalid thread ID: bt all (gdb) thread apply all bt Thread 27 (Thread 0xffffdf1aefa0 (LWP 2720) "pw-data-loop"): #0 0x0000fffff1761870 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #1 0x0000ffffe04378f4 in ?? () from /usr/lib/aarch64-linux-gnu/spa-0.2/support/libspa-support.so #2 0x0000fffff17443c0 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #3 0x0000fffff5a4595c in start_thread (arg=0xfffff7fb4be0) at ./nptl/pthread_create.c:447 #4 0x0000fffff5aaba4c in thread_start () at ../sysdeps/unix/sysv/linux/aarch64/clone3.S:76 Thread 26 (Thread 0xffffde91efa0 (LWP 2719) "pw-data-loop"): #0 0x0000fffff1761870 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #1 0x0000ffffe04378f4 in ?? () from /usr/lib/aarch64-linux-gnu/spa-0.2/support/libspa-support.so #2 0x0000fffff17443c0 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #3 0x0000fffff5a4595c in start_thread (arg=0xfffff7fb4be0) at ./nptl/pthread_create.c:447 #4 0x0000fffff5aaba4c in thread_start () at ../sysdeps/unix/sysv/linux/aarch64/clone3.S:76 Thread 1 (Thread 0xfffff7fb44a0 (LWP 2692) "tst_qaudiosink"): #0 0x0000fffff7fbfeb8 in _dl_close_worker (map=<optimized out>, map@entry=0xaaaaaac41560, force=force@entry=false) at ./elf/dl-close.c:741 #1 0x0000fffff7fc0310 in _dl_close (_map=0xaaaaaac41560) at ./elf/dl-close.c:793 #2 0x0000fffff7fbf33c in __GI__dl_catch_exception (exception=exception@entry=0xffffffffea78, operate=0xfffff7fc02d0 <_dl_close>, args=0xaaaaaac41560) at ./elf/dl-catch.c:237 #3 0x0000fffff7fbf45c in _dl_catch_error (objname=objname@entry=0xffffffffeaa8, errstring=errstring@entry=0xffffffffeab0, mallocedp=mallocedp@entry=0xffffffffeaa7, operate=<optimized out>, args=<optimized out>) at ./elf/dl-catch.c:256 #4 0x0000fffff5a40ff4 in _dlerror_run (operate=<optimized out>, args=<optimized out>) at ./dlfcn/dlerror.c:138 #5 0x0000fffff5a40d10 in __dlclose (handle=<optimized out>) at ./dlfcn/dlclose.c:31 #6 0x0000fffff176fd90 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #7 0x0000fffff176fe30 in ?? () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #8 0x0000fffff17747c4 in pw_deinit () from /lib/aarch64-linux-gnu/libpipewire-0.3.so.0 #9 0x0000fffff7df8450 in pw_deinit () at /home/qt/work/qt/qtmultimedia/src/multimedia/pipewire/qpipewire_symbolloader.cpp:56 #10 0x0000fffff7de496c in TestNamespace::QtPipeWire::QPipeWireInstance::~QPipeWireInstance (this=0xaaaaaabcef90, __in_chrg=<optimized out>) at /home/qt/work/qt/qtmultimedia/src/multimedia/pipewire/qpipewire_instance.cpp:57 #11 0x0000fffff7de58d0 in std::destroy_at<TestNamespace::QtPipeWire::QPipeWireInstance> (__location=0xaaaaaabcef90) at /usr/include/c++/13/bits/stl_construct.h:88 #12 0x0000fffff7de58b0 in std::_Destroy<TestNamespace::QtPipeWire::QPipeWireInstance> (__pointer=0xaaaaaabcef90) at /usr/include/c++/13/bits/stl_construct.h:149
For Gerrit Dashboard: QTBUG-137586 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
652678,6 | PipeWire: clean up active audio streams on exit | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
653188,2 | PipeWire: clean up active audio streams on exit | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
654266,2 | Pipewire: disable pw_deinit | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
654457,2 | Pipewire: disable pw_deinit | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
654945,4 | Pipewire: improve shutdown handling | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
655745,2 | Pipewire: improve shutdown handling | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
655828,3 | Pipewire: re-enable pw_deinit | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
656185,2 | Pipewire: re-enable pw_deinit | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |