PipeWire: clean up active audio streams on exit

When we exit, we may still have active streams that did not get their
`state_change` notification. This notification will not be delivered
anymore after we stop the main loop.
So we clean up the self-reference by hand.

Fixes: QTBUG-137586
Pick-to: 6.10
Change-Id: I6bb0185176b19b0d3459ddb9eb630baea3d5c187
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>